fixed searchbar icon alignment

--- a/styles/_request.scss
+++ b/styles/_request.scss
@@ -178,3 +178,12 @@
     padding-top: 20px;
   }
 }
+
+.search 
+{
+  .search-icon
+  {
+    margin-left: 10px;
+    align-self: center;
+  }
+}
